changed hp in json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-do",
-  "homepage": "http://AD2348f.github.io/todo",
+  "homepage": "http://AD2348f.github.io/projecttodo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
